Chasing down more low-hanging findbugs bugs.