@@ -1,5 +1,5 @@
 /*
- Copyright (c) 2009, 2010, Oracle and/or its affiliates. All rights reserved., Inc. All rights reserved.
+ Copyright (c) 2009, 2011, Oracle and/or its affiliates. All rights reserved., Inc. All rights reserved.
  U.S. Government Rights - Commercial software. Government users are subject
  to the Sun Microsystems, Inc. standard license agreement and applicable
  provisions of the FAR and its supplements. Use is subject to license terms.
@@ -58,7 +58,7 @@ public class ReflectiveStatementInterceptorAdapter implements
 			return (ResultSetInternalMethods) v2PostProcessMethod.invoke(toProxy, new Object[] {sql,
 				interceptedStatement,
 				originalResultSet, connection,
-				new Integer(warningCount), noIndexUsed ? Boolean.TRUE : Boolean.FALSE, noGoodIndexUsed ? Boolean.TRUE: Boolean.FALSE,
+				Integer.valueOf(warningCount), noIndexUsed ? Boolean.TRUE : Boolean.FALSE, noGoodIndexUsed ? Boolean.TRUE: Boolean.FALSE,
 						statementException});
 		} catch (IllegalArgumentException e) {
 			SQLException sqlEx = new SQLException("Unable to reflectively invoke interceptor");
